added driver register, hospital blood request, hospital register, user register, user blood donation, user blood request

--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -49,7 +49,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
           <ul> 
-            <li><a class="nav-link scrollto" href="static/logout.php">Logout</a></li>
+            <li><a class="nav-link scrollto" href="{{url_for('home') }}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -71,22 +71,7 @@
  
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-blue">
-              <div class="icon">
-                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
-                </svg>
-                <i class="bx bxl-dribbble"></i>
-              </div>
-              <h4> 
-              <button type="button"  class="btn btn-primary" data-toggle="modal" data-target="#ambulanceModal">
-                    Add Ambulance
-              </button>
-              </h4>
-              
-            </div>
-          </div>
+          
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
@@ -115,7 +100,7 @@
               </div>
               <h4><a href="">
               <button type="button"   class="btn btn-primary" >
-                        View List of Drivers
+                        View the List of Drivers
               </button>
               </a></h4>
             
@@ -144,50 +129,7 @@
       </div>
     </section><!-- End Sevices Section -->
 
-  <!-- Modal Ambulance-->
-  <div class="modal fade" id="ambulanceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">AddAmbulance</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <form id="formAuthentication" class="mb-3" action="admin_amb_reg.php" method="POST">
-            <div class="mb-3">
-                <label for="amb_id" class="form-label">Enter Ambulance ID</label>
-                <input type="text" class="form-control" id="amb_id" name="amb_id"
-                  placeholder="Name" autofocus required>
-              </div>
-
-              <div class="mb-3">
-                <label for="amb_number" class="form-label">Enter Ambulance Number</label>
-                <input type="text" class="form-control" id="amb_number" name="amb_number"
-                  placeholder="Ambulance Number" autofocus required>
-              </div>
-
-              <div class="mb-3">
-                <label for="amb_center" class="form-label">Enter Ambulance Center</label>
-                <input type="text" class="form-control" id="amb_center" name="amb_center"
-                  placeholder="Enter Ambulance Center" autofocus required>
-              </div>
-
-              <div class="mb-3">
-                <label for="driver_id" class="form-label">Enter Driver id</label>
-                <input type="text" class="form-control" id="driver_id" name="driver_id"
-                  placeholder="Enter Driver ID" autofocus required>
-              </div>   
-          </div>
-        <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        </div>
-      </div>
-    </div>
-  </div>
+ 
 
       </div>
     </div>
