--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
           <div class="col-lg-6">
             <p>
             ACTS was founded on 8 May 2000, under the Presidency of Alkesh Kumar Sharma District Collector and General Secretary Fr. Davis Chiramel
-             with the support of local civic leaders. ACTS has 45,000 members in 17 branches, 145 units and has 22 ambulances
+             with the support of local civic leaders. 
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> ACTS consistes of 45000 members</li>
