--- a/templates/user/user_login.html
+++ b/templates/user/user_login.html
@@ -61,8 +61,8 @@
                 <div class="mb-3" class="col-md-12 text-center">
                   <button class="btn btn-danger" href="user_home.php" type="submit">Sign in</button>
                 </div>
-                <span class="reg">Already have an account? <a class="text-danger" href="user_reg.php">Sign Up</a></span><br>
-                <span class="reg" >Back to <a class="text-danger" href="static/index.php">Home</a></span>
+                <span class="reg">Don't have an account? <a class="text-danger" href="{{url_for('userregister') }}">Sign Up</a></span><br>
+                <span class="reg" >Back to <a class="text-danger" href="{{url_for('home') }}">Home</a></span>
               </form>
             </div>
           
