--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -62,7 +62,7 @@
                   <button class="btn btn-danger" href="admin_home.php" type="submit">Sign in</button>
                 </div>
                 
-                <span class="reg" >Back to <a class="text-danger" href="static/index.php">Home</a></span>
+                <span class="reg" >Back to <a class="text-danger" href="{{url_for('home') }}">Home</a></span>
               </form>
             </div>
           
