--- a/templates/driver/driver_home.html
+++ b/templates/driver/driver_home.html
@@ -48,7 +48,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
           <ul> 
-            <li><a class="nav-link scrollto" href="static/logout.php">Logout</a></li>
+            <li><a class="nav-link scrollto" href="{{url_for('home') }}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
