--- a/templates/driver/driver_login.html
+++ b/templates/driver/driver_login.html
@@ -56,8 +56,8 @@
                 <div class="mb-3" class="col-md-12 text-center">
                   <button class="btn btn-danger" href="driver_police.php" type="submit">Sign in</button>
                 </div>
-                <span class="reg">Already have an account? <a class="text-danger" href="driver_reg.php">Sign Up</a></span><br>
-                <span class="reg" >Back to <a class="text-danger" href="static/index.php">Home</a></span>
+                <span class="reg">Don't have an account? <a class="text-danger" href="{{ url_for('driverregister') }}">Sign Up</a></span><br>
+                <span class="reg" >Back to <a class="text-danger" href="{{ url_for('home') }}">Home</a></span>
               </form>
             </div>
           
