--- a/templates/hospital/hospital_login.html
+++ b/templates/hospital/hospital_login.html
@@ -60,8 +60,8 @@
                 <div class="mb-3" class="col-md-12 text-center">
                   <button class="btn btn-danger" href="hospital_home.php" type="submit">Sign in</button>
                 </div>
-                <span class="reg">Already have an account? <a class="text-danger" href="hospital_reg.php">Sign Up</a></span><br>
-                <span class="reg" >Back to <a class="text-danger" href="static/index.php">Home</a></span>
+                <span class="reg">Already have an account? <a class="text-danger" href="{{ url_for('hospitalregister') }}">Sign Up</a></span><br>
+                <span class="reg" >Back to <a class="text-danger" href="{{ url_for('home') }}">Home</a></span>
               </form>
             </div>
           
