--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -98,7 +98,7 @@ $info = mysqli_fetch_assoc($result);
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-fingerprint-line"></i></div>
-            <h4 class="title"><a href="bp_user.php">Request Blood</a></h4>
+            <h4 class="title"><a href="{{url_for('userbloodrequest') }}">Request Blood</a></h4>
              
           </div>
         </div>
