--- a/templates/hospital/hospital_home.html
+++ b/templates/hospital/hospital_home.html
@@ -82,7 +82,7 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <p>  <a href="static/blood_donlist.php" class="btn btn-primary btn-lg col-md-12"> Blood Donaters List</a></p>
+              <p>  <a href="{{url_for('bloodonatorlist') }}" class="btn btn-primary btn-lg col-md-12"> Blood Donaters List</a></p>
             </div>
           </div>
 
@@ -102,7 +102,7 @@
                  
                 <i class="bx bx-file"></i>
               </div>
-              <p><a href="blood_reqlist.php" class="btn btn-primary btn-lg col-md-12">View Blood Requests</a></p>
+              <p><a href="{{url_for('bloodrequestlist') }}" class="btn btn-primary btn-lg col-md-12">View Blood Requests</a></p>
             </div>
           </div>
 
