--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -81,7 +81,7 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">
+              <h4><a href="{{url_for('accidentlist') }}">
               <button type="button"   class="btn btn-primary" >
                         View Accident Details
               </button>
@@ -98,7 +98,7 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">
+              <h4><a href="{{url_for('driverlist') }}">
               <button type="button"   class="btn btn-primary" >
                         View the List of Drivers
               </button>
