--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -115,7 +115,7 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">
+              <h4><a href="{{url_for('hospitallist') }}">
               <button type="button"   class="btn btn-primary" >
                         View List of Hospital
               </button>
