--- a/templates/driver/driver_home.html
+++ b/templates/driver/driver_home.html
@@ -79,7 +79,7 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
                
-              <p> <a href="static/accident_details.php" class="btn btn-danger btn-lg" id="send" title="CLick to send notification">Send Police Notification</a></p>
+              <p> <a href="{{ url_for('accidentdetail') }}" class="btn btn-danger btn-lg" id="send" title="CLick to send notification">Send Police Notification</a></p>
             </div>
           </div>
 
