--- a/templates/driver/accidentdetail.html
+++ b/templates/driver/accidentdetail.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ACTS</title>
+  <title>Accident Detail</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
