--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -65,7 +65,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="static/ambulance_patience.php">Call Ambulance </a></h4>
+            <h4 class="title"><a href="{{url_for('accidentSendNotify') }}">Call Ambulance </a></h4>
              
           </div>
         </div>
