--- a/templates/user/accidentSendNotify.html
+++ b/templates/user/accidentSendNotify.html
@@ -49,7 +49,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
           <ul> 
-            <li><a class="nav-link scrollto" href=" logout.php">Logout</a></li>
+            <li><a class="nav-link scrollto" href="{{url_for('home') }}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -164,7 +164,7 @@
 
 <script>
           async function getDriver(id){
-            const res= await fetch({{ url_for("accidentDriver", id=id) }});
+            const res= await fetch(`/accidentDriver/${id}`);
             const data = await res.json();
             if(Array.isArray(data))
             {
