--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -73,7 +73,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-palette-line"></i></div>
-            <h4 class="title"><a href="static/hospital.php">Search Hospital  </a></h4>
+            <h4 class="title"><a href="{{url_for('nearhospital') }}">Search Hospital  </a></h4>
             
           </div>
         </div>
