--- a/templates/driver/accidentdetail.html
+++ b/templates/driver/accidentdetail.html
@@ -51,7 +51,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="{{ url_for('admin_home') }}">Home</a></li>
+          <li><a class="nav-link scrollto active" href="{{ url_for(' driver_home') }}">Home</a></li>
           
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
