--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -24,6 +24,8 @@
   <link href="static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
@@ -116,19 +118,68 @@
                     Date of usage: {{ row.date}} <br>
                     Bystander name: {{ row.bystander_name}} <br>
                     Bystander Phone: {{ row.bystander_ph}} <br>
-                    Other Details: {{ row.other}}
+                    Other Details: {{ row.other}} <br><br>
+                    <button type='button' class='btn btn-danger'> <a href='{{url_for('userbloodonation') }}' style='color:white'>Donate Blood</a></button>
                   </p>
                 </div>
               </div>
       
             {% endfor %}
-
+            
           </div>
+          
+         
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
     </section><!-- End Testimonials Section -->
+  <section>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="margin-left:45%">
+          Donation History
+          </button>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+       <div class="modal-header float-right">
+        <h5>Blood Donation History</h5>
+        <div class="text-right">
+          <i data-dismiss="modal" aria-label="Close" class="fa fa-close"></i>
+        </div>
+      </div>
+      <div class="modal-body">
+        <div>
+          
+          <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Date</th>
+              <th scope="col">Blood Group</th>
+              <th scope="col">Phone Number</th>
+            </tr>
+          </thead>
+          <tbody>
+              {% for row in blooddonate %}
+                 <tr>
+                 <td>{{row.name}}</td>
+                 <td>{{row.date}}</td>
+                 <td>{{row.blood_group}}</td>
+                 <td>{{row.ph_no}}</td>
+                 </tr>
+              {% endfor %}
+          </tbody>
+        </table>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+    
   </main><!-- End #main -->
 
  
@@ -147,6 +198,8 @@
 
   <!-- Template Main JS File -->
   <script src="static/assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </body>
 
