--- a/templates/user/accidentSendNotify.html
+++ b/templates/user/accidentSendNotify.html
@@ -49,7 +49,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
           <ul> 
-            <li><a class="nav-link scrollto" href="{{url_for('userhome') }}">Home</a></li>
+            <li><a class="nav-link scrollto" href="{{url_for('user_home') }}">Home</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
