--- a/templates/hospital/bloodonatorlist.html
+++ b/templates/hospital/bloodonatorlist.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.bootstrap.min.css">
- 
+    <link href="https://see.fontimg.com/api/renderfont4/mLO6P/eyJyIjoiZnMiLCJoIjo4MSwidyI6MTI1MCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/QUNUUyA/hotsnow-free-vertion-regular.png" rel="icon">
     <title>Document</title>
     <style>
         
