--- a/templates/driver/driverregister.html
+++ b/templates/driver/driverregister.html
@@ -10,7 +10,7 @@
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
-    <link href="https://see.fontimg.com/api/renderfont4/mLO6P/eyJyIjoiZnMiLCJoIjo4MSwidyI6MTI1MCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/QUNUUyA/hotsnow-free-vertion-regular.png" rel="icon">
+  <link href="static/img/icons/acts.png" rel="icon">
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
