--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://see.fontimg.com/api/renderfont4/mLO6P/eyJyIjoiZnMiLCJoIjo4MSwidyI6MTI1MCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/QUNUUyA/hotsnow-free-vertion-regular.png" rel="icon">
+<link href="static/img/icons/acts.png" rel="icon">
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
