--- a/templates/driver/driver_login.html
+++ b/templates/driver/driver_login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
-    <link href="https://see.fontimg.com/api/renderfont4/mLO6P/eyJyIjoiZnMiLCJoIjo4MSwidyI6MTI1MCwiZnMiOjY1LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/QUNUUyA/hotsnow-free-vertion-regular.png" rel="icon">
+<link href="static/img/icons/acts.png" rel="icon">
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
