added manifest file to all html files

--- a/templates/driver/driverregister.html
+++ b/templates/driver/driverregister.html
@@ -11,6 +11,7 @@
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
   <link href="static/img/icons/acts.png" rel="icon">
+    <link rel="manifest" href="/manifest.json">
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
