--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
- 
+ <link rel="manifest" href="/manifest.json">
   </head>
 
   <body>
