--- a/templates/admin/hospitallist.html
+++ b/templates/admin/hospitallist.html
@@ -7,6 +7,7 @@
     <title>ACTS AUTO</title>
    <link href="static/img/icons/acts.png" rel="icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="manifest" href="/manifest.json">
     <style>
         table {
             border-collapse: collapse;
