--- a/templates/hospital/bloodonatorlist.html
+++ b/templates/hospital/bloodonatorlist.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.bootstrap.min.css">
   <link href="static/img/icons/acts.png" rel="icon">
+  <link rel="manifest" href="/manifest.json">
     <title>Document</title>
     <style>
         
