--- a/templates/user/userregister.html
+++ b/templates/user/userregister.html
@@ -14,6 +14,7 @@
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
+    <link rel="manifest" href="/manifest.json">
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
 
