--- a/templates/driver/acceptReject.html
+++ b/templates/driver/acceptReject.html
@@ -5,7 +5,7 @@
     <title>ACTS AUTO</title>
     <link rel="stylesheet" href="style.css">
    <link href="static/img/icons/acts.png" rel="icon">
-    <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <style>
       body{
         background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
