--- a/templates/hospital/hospitalregister.html
+++ b/templates/hospital/hospitalregister.html
@@ -14,7 +14,7 @@
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
-    <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
 
