--- a/templates/driver/driver_login.html
+++ b/templates/driver/driver_login.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="static/files-login/demo.css" />
 <link href="static/img/icons/acts.png" rel="icon">
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
-    <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <!-- Helpers -->
     <script src="static/files-login/helpers.js"></script>
  
