--- a/templates/driver/driverregister.html
+++ b/templates/driver/driverregister.html
@@ -11,7 +11,7 @@
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="static/files-login/perfect-scrollbar.css" />
   <link href="static/img/icons/acts.png" rel="icon">
-    <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="static/files-login/page-auth.css" />
