--- a/templates/hospital/bloodrequestlist.html
+++ b/templates/hospital/bloodrequestlist.html
@@ -11,7 +11,7 @@
         background-color:#f3e5dc;
       }
     </style>
-    <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
   </head>
   <body>
 
