--- a/templates/hospital/hospital_login.html
+++ b/templates/hospital/hospital_login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="static/files-login/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="static/files-login/theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="static/files-login/demo.css" />
-    <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 
     <!-- Page CSS -->
     <!-- Page -->
