--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
- <link rel="manifest" href="/manifest.json">
+ 
+  <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
   <title>ACTS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
