--- a/templates/user/near_hospital.html
+++ b/templates/user/near_hospital.html
@@ -13,7 +13,7 @@
   <!-- Favicons -->
 <link href="static/img/icons/acts.png" rel="icon">
   <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-<link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+ 
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -65,25 +65,9 @@
           <h1>ACTS AUTO </h1>
           <h2>Nearest Hospital</h2>
         </div>
-        <div class="row icon-boxes">
-            {% for row in nearhospitaldata %}
-<div class='col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0' data-aos='zoom-in' data-aos-delay='200'>
-  <div class='icon-box'>
-    <div class='icon'><i class='ri-stack-line'></i></div>
-    <p >
-
-     Hospital Name: {{row.hname}}<br>
-     Location: {{ row.hospital_location}}<br>
-     Hospital Phone:{{ row.hphone}}<br>
-     Distance  :<p id="dist" onload="search({{row.hospital_latitude}},row.hospital_longitude}})"></p><br>
-     <button class='btn btn-success align-top'  onclick='openGoogleMaps({{ row.hospital_latitude}},{{ row.hospital_longitude}});'>Go to Maps<lord-icon src='https://cdn.lordicon.com/oaflahpk.json' trigger='hover' style='width:50px;height:50px'></lord-icon></button> 
-
-    </p>
-  </div>
-</div>
-          {% endfor %}
-          
-      </div>
+        <div class="row icon-boxes" id="hospitals">          
+                <h5>Fetching hospital details....wait for the magic...</h5>
+        </div>
        
       </div>
     </div>
@@ -110,34 +94,82 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
  
 
+ 
+
 <script>
     //----------------------------------------------Getting Route distance----------------------------------------------
-    function search(dlat,dlon){
-      navigator.geolocation.getCurrentPosition(successCallback, errorCallback );
-    function successCallback(position) {
-        const { accuracy, latitude, longitude,  speed } = position.coords; //give values from position.coords to array
-         
-        // Define the latitude and longitude of the location
+
+    function createHospitalCard(hospital){
+        const {hname,location,hphone,latitude,longitude,distance} = hospital;
+       
         
-        const lat = latitude;     // current latitude
-        const lon = longitude;    //current longitude
-        const origin = [latitude, longitude]; // latitude and longitude of the origin location
-        const destination = [dlat, dlon]; // latitude and longitude of the destination location
-        const url = `https://router.project-osrm.org/route/v1/driving/${origin[1]},${origin[0]};${destination[1]},${destination[0]}?annotations=distance`;
-        fetch(url)
-        .then(response => response.json())
-        .then(data => {
-            const distance = data.routes[0].distance / 1000; // distance in kilometers
-            document.getElementById("dist").textContent = `${distance}`;
+        return `
+        <div class='col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0' data-aos='zoom-in' data-aos-delay='200'>
+            <div class='icon-box'>
+                <div class='icon'><i class='ri-stack-line'></i></div>
+                    <p >
+                        Hospital Name: ${hname}<br>
+                        Location: ${location}<br>
+                        Hospital Phone:${hphone}<br>
+                        Distance: <p>${distance} km
+                    </p><br>
+                    <button class='btn btn-success align-top'  onclick='openGoogleMaps(${latitude},${longitude});'>
+                    Go to Maps
+                    <lord-icon src='https://cdn.lordicon.com/oaflahpk.json' trigger='hover' style='width:50px;height:50px'></lord-icon>
+                    </button> 
+                </p>
+            </div>
+        </div>`
+    }
+
+    function getPosition() {
+        return new Promise((res, rej) => {
+            navigator.geolocation.getCurrentPosition(res, rej);
         });
-      }
-      function errorCallback(error) {
     }
+    async function getDistance(dlat, dlon) {
+        const position = await getPosition();
+        
+        const origin = [position.coords.latitude,position.coords.longitude];
+        const destination = [dlat, dlon];
+        
+        const url = `https://router.project-osrm.org/route/v1/driving/${origin[1]},${origin[0]};${destination[1]},${destination[0]}?annotations=distance`;
+        const response = await fetch(url);
+        const data = await response.json();
+        const distance = data.routes[0].distance / 1000;
+        return distance;
     }
+    const hospitals = 
+        [
+            {% for row in nearhospitaldata %}
+                { 
+                    hname : '{{row.hname}}',
+                    location: '{{row.hospital_location}}',
+                    latitude: {{row.hospital_latitude}}, 
+                    longitude: {{row.hospital_longitude}},
+                    hphone: '{{row.hphone.replace(" ","")}}'
+                },
+            {% endfor %}
+        ]
+   
+    const render_hospital_cards = async () =>{
+        const hospitals_with_distances = await Promise.all(hospitals.map(async(h)=>{
+            const distance = await getDistance(h.latitude,h.longitude);
+            return {
+                ...h,
+                distance
+            }
+        }));
+     
+        hospitals_with_distances.sort((a,b)=>a.distance - b.distance);
+   
+        const cards = hospitals_with_distances.reduce((html,hospital)=>html+createHospitalCard(hospital),"")
+  
+        document.getElementById('hospitals').innerHTML = cards;
+    }
+    render_hospital_cards();
+</script>
 
-    
-
-    </script>
 
     <script>
       function openGoogleMaps(destLat, destLng) {
