--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
  
-  <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
   <title>ACTS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -29,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="static/assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: OnePage
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  ======================================================== -->
   <!--Script for Notification enabling-->
     <script>
     Notification.requestPermission().then(function (permission) {
@@ -50,9 +42,6 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="#">ACTS AUTO</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
@@ -66,24 +55,22 @@
           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+      </nav>
     </div>
   </header><!-- End Header -->
  
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center" >
     <div class="container position-relative">
-    <div class="row justify-content-center">
-        <div class="col-xl-7 col-lg-9 text-center">
-          <h1>ACTS AUTO </h1>
-          <h2>An Accident Care and Transport Initiative</h2>
+      <div class="row justify-content-center">
+          <div class="col-xl-7 col-lg-9 text-center">
+            <h1>ACTS AUTO </h1>
+            <h2>An Accident Care and Transport Initiative</h2>
         </div>
       </div>
       <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>About Us</h2>
           <p>Accident Care and Transport Service or ACTS is a voluntary organisation providing <br>free emergency assistance to accident victims in Thrissur city and Thrissur District of India. </p>
@@ -101,7 +88,6 @@
               <li><i class="ri-check-double-line"></i> ACTS have 145 units for services</li>
               <li><i class="ri-check-double-line"></i> ACTS own 22 ambulances </li>
             </ul>
- 
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
@@ -109,53 +95,45 @@
             for Accident Care and Transport Service for their valuable contribution to the society. In its report submitted to Supreme Court, the Committee
              recommended the Thrissur model of Good Samaritans. Those recommendations were accepted by the apex court and Thrissur Model of Good Samaritans 
              has been adopted in framing guidelines to be followed all over India.
-            
             </p>
-       
           </div>
         </div>
 
       </div>
     </section><!-- End About Section -->
+
+    <!--Login Section-->
     <h2 class="row justify-content-center">Login Options</h2>
       <div class="row icon-boxes">
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a href="{{ url_for('userlogin') }}">User Login </a></h4>
-             
           </div>
         </div>
-
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-palette-line"></i></div>
-            <h4 class="title"><a href="{{ url_for('driverlogin') }}">Driver Login  </a></h4>
-            
+            <h4 class="title"><a href="{{ url_for('driverlogin') }}">Driver Login  </a></h4> 
           </div>
         </div>
-
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-command-line"></i></div>
-            <h4 class="title"><a href="{{ url_for('hospitallogin') }}">Hospital Login</a></h4>
-             
+            <h4 class="title"><a href="{{ url_for('hospitallogin') }}">Hospital Login</a></h4>  
           </div>
         </div>
-
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-fingerprint-line"></i></div>
             <h4 class="title"><a href="{{ url_for('adminlogin') }}">Admin Login</a></h4>
-             
           </div>
         </div>
-
       </div>
     </div>
-  </section><!-- End Hero -->
+  </section>
+  <!-- End Hero -->
   
-
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
